name:                WaveSim
version:             0.1
synopsis:            Creates a simple visual wave simulation.
description:         Creates a simple visual wave simulation using OpenGL.
category:            Game
license:             BSD3
license-file:        LICENSE
author:              Jaime Thomas
maintainer:          avi.thomas@gmail.com
build-depends:       base
build-type:          Simple
stability:           Alpha

executable:          WaveSim
main-is:             WaveSim.hs
ghc-options:         -Wall
hs-source-dirs:      src
build-depends:       OpenGL >= 2.4, GLUT >= 2.2.2, base > 4
