name:                WaveSim
version:             0.1
synopsis:            Creates a simple visual wave simulation.
description:         Creates a simple visual wave simulation using OpenGL.
category:            Game
license:             BSD3
license-file:        LICENSE
author:              Jaime Thomas
maintainer:          avi.thomas@gmail.com
build-depends:       base
build-type:          Simple
stability:           Alpha
data-files:          data/*.png

library
   hs-source-dirs: src
   exposed-modules:
      WaveSim
      WaveSim.Types
      WaveSim.WaveSim
      WaveSim.Graphics
      WaveSim.Program
   other-modules:
      Paths_WaveSim
      WaveSim.Menu
      WaveSim.TwoD
      WaveSim.Input
      WaveSim.Widgets

executable wavesim
   main-is: Main.hs
   ghc-options: -Wall
   hs-source-dirs: src
   build-depends: Cabal >= 1.6
   build-depends: OpenGL >= 2.4
   build-depends: GLUT >= 2.2.2
   build-depends: base >= 4
   build-depends: SDL >= 0.5.9
   build-depends: SDL-image >= 0.5.2
   build-depends: mtl >= 1.1
   build-depends: haskell98
   build-depends: dyre >= 0.8.2
   build-depends: time
   other-modules:
      WaveSim
      WaveSim.Types
      WaveSim.WaveSim
      Paths_WaveSim
      WaveSim.Menu
      WaveSim.Graphics
      WaveSim.Program
      WaveSim.TwoD
      WaveSim.Input
      WaveSim.Widgets
